fixed projects not updating